<resources>
    <string name="app_name">Inmobiliaria López</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">TP Inmobiliaria</string>
    <string name="nav_header_subtitle">edulopez.dev@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="inicio">Inicio</string>
    <string name="perfil">Perfil</string>
    <string name="inmueble">Inmueble</string>
    <string name="inquilino">Inquilino</string>
    <string name="contrato">Contrato</string>
    <string name="logout">Logout</string>
</resources>