<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="com.example.inmobiliaria.ui.inicio.InicioFragment"
        android:label="@string/inicio"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.inmobiliaria.ui.perfil.PerfilFragment"
        android:label="@string/perfil"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/nav_inmueble"
        android:name="com.example.inmobiliaria.ui.inmueble.InmuebleFragment"
        android:label="@string/inmueble"
        tools:layout="@layout/fragment_inmueble" >
        <action
            android:id="@+id/action_nav_inmueble_to_detalleInmueble"
            app:destination="@id/detalleInmueble" />
        <action
            android:id="@+id/action_nav_inmueble_to_crearInmuebleFragment"
            app:destination="@id/crearInmuebleFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_inquilino"
        android:name="com.example.inmobiliaria.ui.inquilino.InquilinoFragment"
        android:label="@string/inquilino"
        tools:layout="@layout/fragment_inquilino" />

    <fragment
        android:id="@+id/nav_contrato"
        android:name="com.example.inmobiliaria.ui.contrato.ContratoFragment"
        android:label="@string/contrato"
        tools:layout="@layout/fragment_contrato" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.inmobiliaria.ui.logout.LogoutFragment"
        android:label="@string/logout"
        tools:layout="@layout/fragment_logout" />
    <fragment
        android:id="@+id/detalleInmueble"
        android:name="com.example.inmobiliaria.ui.inmueble.DetalleInmueble"
        android:label="DetalleInmueble" >
        <action
            android:id="@+id/action_detalleInmueble_to_nav_inmueble"
            app:destination="@id/nav_inmueble" />
    </fragment>
    <fragment
        android:id="@+id/crearInmuebleFragment"
        android:name="com.example.inmobiliaria.ui.inmueble.crear.CrearInmuebleFragment"
        android:label="CrearInmuebleFragment" >
        <action
            android:id="@+id/action_crearInmuebleFragment_to_nav_inmueble"
            app:destination="@id/nav_inmueble" />
    </fragment>
</navigation>
